# jx-3p-patches

./: .gitignore  Makefile  README.md  pyproject.toml  shell.nix  shell.zsh
c/: Makefile
c/decoder/: makefile
c/decoder/include/: decoder_patch.h
c/decoder/src/: decode_patches.c
c/encoder/: Makefile  patch.h
c/include/: jx3p_patch.h
docs/: install.md  json-schema.md  patch-format.md
jx3p/: __init__.py  cli.py  codec.py  formats.py  patch.py
schemas/: bank.schema.json  patch.schema.json
tests/: test_formats.py  test_parity.py  test_roundtrip.py
tests/fixtures/: patchdump.csv  patchdump.json
