[project]
name = "jx3p"
version = "0.1.0"
description = "Read and write Roland JX-3P synthesiser patch files (FSK-encoded WAV, CSV, JSON)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "bruce oberg" },
]
keywords = ["roland", "jx-3p", "synthesiser", "patch", "fsk", "audio"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "numpy",
    "jsonschema",
]

[project.optional-dependencies]
audio = ["scipy"]
dev = ["pytest"]

[project.scripts]
jx3p = "jx3p.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jx3p"]

[tool.hatch.build.targets.wheel.force-include]
"schemas/patch.schema.json" = "jx3p/schemas/patch.schema.json"
"schemas/bank.schema.json" = "jx3p/schemas/bank.schema.json"
